# mcp-servers-demo

./: .gitignore  CLAUDE.md  README.md  TODO.md  mcp-servers-demo.code-workspace  mcp_client.py  mcp_server.py  pyproject.toml
DOCS/: LLM-Tools-and-Context-Overview.md  MCP-Security-Analysis-2025.md  TOML-quick-reference.md  instalacja-custom-python-mcp-serwerow.md  mcp-python-sdk-overview.md  n8n-open-source-guide.md  uv-uvx-vs-npm-npx.md
DOCS/MCP -- Server types/: MCP_Server_Types_Analysis_Complete.md  Slajdy_Typy_Serwerow_MCP.md  Typy_Serwerow_MCP_Analiza.md
DOCS/MCP -- Testing and Evaluation/: MCP-Testing-Evaluation-2025.md  MCP-Testing-Slides-Proposal.md
DOCS/Rest, Tools, Plugins/: MCP_vs_REST_Plugins_Tools_Comparison.md  MCP_vs_REST_Slides_Proposal.md  MCP_vs_REST_Tools_Plugins_Quick_Notes.md
DOCS/Security, Privacy/: MCP-Privacy-Report-Conference.md
DOCS/__features/: README.md
DOCS/__technical/: claude-api-token-optimization-guide.md  java-mcp-client-sketch.md  python-async-context-managers.md  python-hook-template-method.md  python-list-comprehension-vs-java-streams.md  repo-notes.md
core/: chat.py  claude.py  cli_chat.py  tools.py
hello/: server.py
prompts/: Consilidate_research.md
reddit/docs/: reddit-api-access-registration-pain.md  reddit-api-and-praw-guide.md  reddit-api-terms-summary.md  reddit-responsible-builder-policy-summary.md
reddit/docs/REDDIT-001/: REDDIT-001-context.md  REDDIT-001-plan.md  REDDIT-001-review.md  REDDIT-001-tasks.md
